# pmacFilterControl

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  objects.inv  pmacFilterControlWrapper.py  pyproject.toml  search.html  searchindex.js  setup.cfg  zmqadapter.py
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/explanations/: interface.doctree  overview.doctree
.doctrees/how-to/: development.doctree  docs.doctree  excalidraw.doctree  index.doctree
.doctrees/how-to/development/: ppmac_config.doctree  ppmac_cross_compiling.doctree  ppmac_deploy.doctree
.doctrees/reference/: api.doctree  design_spec.doctree  index.doctree
.github/workflows/: code.yml  container.yml  docs.yml
_sources/: index.md.txt
_sources/explanations/: interface.md.txt
_sources/how-to/: docs.md.txt  excalidraw.md.txt
_sources/how-to/development/: ppmac_cross_compiling.md.txt  ppmac_deploy.md.txt
_sources/reference/: api.md.txt  design_spec.md.txt
cmake/: arm-gcc-toolchain.cmake
deploy/: deploy-pfc.sh  deploy-procServ.sh  pmacFilterControl.sh  procServ
docker/: Dockerfile  hello.cpp  run_arm_container.sh
docs/: CMakeLists.txt  conf.py  design_spec.md  index.md  ppmac_cross_compiling.md  ppmac_deploy.md  requirements.txt  sphinx.yaml
docs/doxygen/: Doxyfile  doxygen.sh
docs/explanations/: interface.md  overview.md  singleshot.md
docs/how-to/: docs.md  excalidraw.md  index.md
docs/how-to/development/: ppmac_config.md  ppmac_cross_compiling.md  ppmac_deploy.md
docs/reference/: api.md  design_spec.md  index.md
explanations/: interface.html  overview.html
how-to/: development.html  docs.html  excalidraw.html  index.html
how-to/development/: ppmac_config.html  ppmac_cross_compiling.html  ppmac_deploy.html
reference/: api.html  design_spec.html  index.html
src/: CMakeLists.txt  pmacFilterControl.cpp  pmacFilterControl.h  version.h.in
src/plc/: Makefile  example.psub  filter_control.plc  filter_control.psub  filter_move.pmc
src/pmacfiltercontrol/: __init__.py  detector_sim.py  hdfadapter.py  pmacFilterControlWrapper.py  zmqadapter.py
src/pmc/: Makefile  example.psub  filter_control.pmc
test/: CMakeLists.txt  detector_sim.py  event_subscriber.py  requirements.txt  zmqSender.c
tests/: conftest.py  detector_sim.py  event_subscriber.py  requirements.txt  test_asyncio_pfc_wrapper.py  test_autosave.txt  test_hdf_adapter.py  test_pfc_ioc.py  test_pfc_wrapper.py  test_pmac_filter_control.py  test_zmq_adapter.py  zmqPublisher.c
tools/: Dockerfile  run_arm_container.sh
