[metadata]
name = pmacfiltercontrol
description = EPICS IOC and system test framework for pmacFilterControl
url = https//github.com/dls-control/pmacFilterControl
author = Oliver Copping
author_email = oliver.copping@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src

install_requires =
    importlib_metadata
    aioca
    h5py
    softioc
    aiozmq
    zmq
    typer

[options.extras_require]
# For development tests/docs
dev =
    black
    flake8
    pytest-asyncio
    sphinx-autobuild
    sphinx-external-toc
    myst-parser
    breathe
    pydata-sphinx-theme
    sphinx-design

[options.packages.find]
where = src

[options.entry_points]
# Include a command line script
console_scripts =
    pmac_filter_control_ioc = softioc.__main__:main
    event_subscriber = pmacfiltercontrol.event_subscriber:main
    detector_sim = pmacfiltercontrol.detector_sim:main

[flake8]
max-line-length = 88

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    ./
    **/site-packages/
