[metadata]
name = pmacfiltercontrol
description = EPICS IOC and system test framework for pmacFilterControl
url = https//github.com/dls-control/pmacFilterControl
author = Oliver Copping
author_email = oliver.copping@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src

install_requires =
    importlib_metadata
    aioca
    h5py
    softioc>=4.2.0
    aiozmq
    typer>=0.7.0  # Fix incompatibility with click>=8.1.0 | https://github.com/tiangolo/typer/issues/377

[options.extras_require]
# For development tests/docs
dev =
    black
    flake8
    mypy
    coverage
    mock
    pytest>=7.1.1
    pytest-mock
    pytest-asyncio
    pytest-cov
    sphinx-autobuild
    sphinx-external-toc
    myst-parser
    breathe
    pydata-sphinx-theme>=0.13.0
    sphinx-design
    pre-commit
    isort >5.0

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = tests

[options.entry_points]
# Include a command line script
console_scripts =
    pmac_filter_control_ioc = softioc.__main__:main
    event_subscriber = pmacfiltercontrol.event_subscriber:main
    detector_sim = pmacfiltercontrol.detector_sim:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
max-line-length = 88
extend-ignore =
 # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
# support typing.overload decorator
    F811,
# allow Annotated[typ, some_func("some string")]
    F722,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
     --cov=pmacfiltercontrol --cov-report term --cov-report xml:cov.xml
asyncio_mode = strict

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit =
    */_version.py
    src/pmacfiltercontrol/detector_sim.py
    src/pmacfiltercontrol/event_subscriber.py

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    ./
    **/site-packages/
